99-flussoapplicativo/istio-policies/03-be/06-allow-from-mgw.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-mgw
  namespace: be
spec:
  selector:
    matchLabels: {} # You can specify labels here if you want to target specific services
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: [ "mgw", "mgw-*" ] # Allow traffic from the same namespace
